# min_tokenization_translator

./: .gitignore  Dockerfile  Flex processing.md  README.md  TODO.md  prompt.md  pyproject.toml
configs/: agent.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  GITHUB_SETUP.md  HOSTING.md  USAGE.md
installers/: install.ps1  install.sh
scripts/: bootstrap_session.py  run_benchmark.py  run_server.py
src/min_tokenization_translator/: __init__.py  benchmark.py  bootstrap.py  config.py  distiller.py  handshake.py  server.py
src/mrconductor/: __init__.py  bootstrap.py  encoder.py  handshake.py  server.py
subprojects/mcp-middleman/: README.md
subprojects/mcp-middleman/docs/: INTEGRATION.md  PLAN.md
subprojects/mcp-middleman/experiments/: README.md
tests/: test_benchmark.py  test_distiller.py  test_encoder.py  test_feature_flags.py  test_handshake.py
