[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "min-tokenization-translator"
version = "0.1.0"
description = "Min Tokenization Translator: compression stack for token-efficient machine-to-machine prompts."
requires-python = ">=3.9"
authors = [{name = "Min Tokenization Translator Maintainers"}]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
]
server = [
    "fastapi",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["src"]
